# RO_PUF

./: .gitignore  README.md  top.bit
DeepskyblueChocolate/: convert.py  crp.txt  crp_hex.txt  crp_small.txt  main.py  out.txt  relbias.py
Matlab/: uart_all_c.m  uart_serial.m  uart_test.asv  uart_test.m  uart_test_double.m  uart_writemem.m
Matlab/crp/: corrected_bin.txt  corrected_hex.txt  hash_bin.txt  hash_hex.txt  hexa.txt  sha_2A_00.txt  sha_2A_00_hex.txt  sha_2A_01.txt  sha_2A_01_hex.txt
python/: metrics.py  pyproject.toml  uniqueness.py
sources/BCH/: COPYING  config.vh
sources/PUF/: LFSR.v  PUF.v  RO.v  buff.v  comparator.v  control.v  counter.v  ec.v  fifo.v  mem.v  mux16to1.v  pulse_scaler.v  romrom.v  rotate_leds.v  shiftReg.v  top.v  uart_controller.v  uart_rx.v  uart_tx.v
sources/SHA256/: sha256.v  sha256_core.v  sha256_k_constants.v  sha256_w_mem.v
sources/constrains/: Nexys-4-DDR-Master.xdc
sources/ip/clk_wiz/: clk_wiz.dcp  clk_wiz.v  clk_wiz.veo  clk_wiz.xci  clk_wiz.xml  clk_wiz_clk_wiz.v  clk_wiz_sim_netlist.v  clk_wiz_sim_netlist.vhdl  clk_wiz_stub.v  clk_wiz_stub.vhdl
sources/ip/spram/: spram.dcp  spram.veo  spram.vho  spram.xci  spram.xml  spram_sim_netlist.v  spram_sim_netlist.vhdl  spram_stub.v  spram_stub.vhdl
sources/ip/spram/sim/: spram.v
sources/ip/spram/synth/: spram.vhd
sources/sim/: encoder_tb.v  tb_ec.v  tb_hash.v  tb_super.v  testbench.v  uart_tb.v
